# recordio

./: CMakeLists.txt  LICENSE  README.md  recordio.cc  recordio.h  recordio.py  recordio_range.h
example/: .gitignore  example.cc  read.cc  read.py  write.cc  write.py
test/: .gitignore  CMakeLists.txt  person.proto  test.cc
